:lipstick: Fix MapFullSpot nav item display bug on safari

--- a/public/styles/map/fullSpotPopup/nav.styl
+++ b/public/styles/map/fullSpotPopup/nav.styl
@@ -115,7 +115,8 @@
 			letter-spacing: 0.03em
 
 		&-icon
-			display: flex
+			width: 1.5rem
+			height: 1.5rem
 			margin-right: 0.5rem
 
 			& svg
